# vip-channel-bot

./: .env  bot.py  gitignore  main.py  payments.py
vip-channel-bot/: pyproject.toml
