cat > pyproject.toml << 'EOF'
[tool.poetry]
name = "vip-channel-bot"
version = "0.1.0"
description = "VIP Channel Telegram Bot"

[tool.poetry.dependencies]
python = "^3.8"
python-telegram-bot = "^20.7"
requests = "^2.31.0"
aiohttp = "^3.9.0"
python-dotenv = "^1.0.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
EOF
